# TypeSymbol

./: .gitignore  CONTRIBUTING.md  Cargo.toml  HOMEBREW_TAP_SETUP.md  INSTALL.md  LICENSE  README.md  RELEASING.md  SECURITY.md  TypeSymbol_PRD.md  WINGET_SETUP.md  checksums.txt
.githooks/: pre-commit
.github/: release.yml
.github/workflows/: publish-homebrew-tap.yml  publish-winget.yml  release.yml
crates/typesymbol-cli/src/: main.rs
crates/typesymbol-config/src/: lib.rs
crates/typesymbol-core/: Cargo.toml
crates/typesymbol-core/src/: lib.rs
crates/typesymbol-daemon/: Cargo.toml
crates/typesymbol-daemon/src/: lib.rs
crates/typesymbol-platform-macos/src/: lib.rs
crates/typesymbol-platform-windows/src/: lib.rs
docs/: CONTRIBUTING.md  PRD.md  README.md  homebrew-tap.md  install.md  releasing.md  syntax-guide.md  winget.md
packaging/homebrew/: typesymbol.rb  typesymbol.rb.template
packaging/windows/: typesymbol.wxs
packaging/winget/: typesymbol.installer.yaml.template  typesymbol.locale.en-US.yaml.template  typesymbol.yaml.template
scripts/: build-windows-msi.ps1  generate-homebrew-formula.sh  generate-winget-manifests.ps1  install-macos.sh  install-windows-release.ps1  install-windows.ps1  sync-release-metadata.sh
typesymbol-cli/: Cargo.toml
typesymbol-cli/src/: main.rs
typesymbol-config/: Cargo.toml
typesymbol-config/src/: lib.rs
typesymbol-core/: Cargo.toml
typesymbol-core/src/: lib.rs
typesymbol-daemon/: Cargo.toml
typesymbol-daemon/src/: lib.rs
typesymbol-platform-macos/: Cargo.toml
typesymbol-platform-macos/src/: lib.rs
typesymbol-platform-windows/: Cargo.toml
typesymbol-platform-windows/src/: lib.rs
