[workspace]
resolver = "2"
members = [
    "typesymbol-core",
    "typesymbol-config",
    "typesymbol-cli",
    "typesymbol-daemon",
    "typesymbol-platform-macos",
    "typesymbol-platform-windows"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/yazanmwk/TypeSymbol"
