[workspace]
resolver = "2"
members = [
    "crates/typesymbol-core",
    "crates/typesymbol-config",
    "crates/typesymbol-cli",
    "crates/typesymbol-daemon",
    "crates/typesymbol-platform-macos",
    "crates/typesymbol-platform-windows"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/yazanmwk/TypeSymbol"
