[package]
name = "typesymbol-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "typesymbol"
path = "src/main.rs"

[dependencies]
typesymbol-core = { path = "../typesymbol-core" }
typesymbol-config = { path = "../typesymbol-config" }
typesymbol-daemon = { path = "../typesymbol-daemon" }
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
fs2 = "0.4"
ratatui = "0.29"
crossterm = "0.29"
