[package]
name = "typesymbol-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
typesymbol-core = { path = "../typesymbol-core" }
typesymbol-config = { path = "../typesymbol-config" }

[target.'cfg(target_os = "macos")'.dependencies]
typesymbol-platform-macos = { path = "../typesymbol-platform-macos" }

[target.'cfg(target_os = "windows")'.dependencies]
typesymbol-platform-windows = { path = "../typesymbol-platform-windows" }
