[package]
name = "typesymbol-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
typesymbol-core = { path = "../typesymbol-core" }
typesymbol-config = { path = "../typesymbol-config" }

[target.'cfg(target_os = "macos")'.dependencies]
typesymbol-platform-macos = { path = "../typesymbol-platform-macos" }
